--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,12 @@ python = "^3.9"
 colormath = { version = "^3.0.0", optional = true }
 
 [tool.poetry.dev-dependencies]
+colormath = "^3.0.0"
 mypy = "^0.971"
 pytest = "^7.1.2"
 pytest-camel-collect = "^1.0.2"
 pytest-lambda = "^2.2.0"
+pytest-assert-utils = "^0.3.1"
 
 [tool.poetry.extras]
 colormath = ["colormath"]
